...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3jk-gF-tn0">
                                <rect key="frame" x="10" y="10" width="85" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="p6S-PP-nxa"/>
                                    <constraint firstAttribute="width" constant="85" id="ubg-08-e8W"/>
                                </constraints>
                                <state key="normal" title="Go Back"/>
                                <connections>
                                    <action selector="goBackButton:" destination="nRE-v7-HVl" eventType="touchUpInside" id="g5k-5d-H56"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
